# ani-vault

./: .cursorrules  .gitignore  README.md  RULES.md  index.html  package-lock.json  package.json  vitest.config.js
csp-engine/: install.js  package-lock.json  package.json  server.js
csp-engine/plugins/: anime.js  demo.js  yinghua.js
previews/: style-a-glass.html  style-b-neon.html  style-c-glow.html  style-d-soft.html
public/live2d-models/bronya/: model.json
scripts/: download-missing.cjs  download-moc-files.cjs  download-models.cjs  download-node.cjs  download-textures.cjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: anime.js  engine-client.js  source-client.js  sources.js  sub-client.js  worker-client.js
src/api/adapters/: appys.js  cms.js
src/composables/: useProxyImage.js
src/directives/: lazy.js
src/router/: index.js
src/store/: useAnimeStore.js  useHistoryStore.js  usePlayerStore.js  useSourceStore.js  useTaskStore.js
src/styles/: animations.css  global.css  main.css  variables.css
src/utils/: cache.js  helpers.js  image-proxy.js  request.js
src/views/: Detail.vue  History.vue  Home.vue  Player.vue  Search.vue  Sources.vue  VideoEnhance.vue
tests/: playwright.config.js
tests/e2e/: home.spec.js  navigation.spec.js  player.spec.js  search.spec.js
tests/fixtures/: tauri-mock.js
tests/unit/: source-client.test.js  sub-client.test.js  usePlayerStore.test.js
worker/: main.py  requirements.txt
(+16 files in other folders)
