[package]
name = "ani-vault"
version = "0.1.0"
description = "AniVault - 动漫收藏客户端"
authors = ["you"]
edition = "2021"

[lib]
name = "ani_vault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["gzip", "deflate", "brotli"] }
aes = "0.8"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["time", "sync"] }
